--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
