--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.12",
     "@headlessui/react": "^1.7.18",
+    "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
