--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^5.0.12",
     "@headlessui/react": "^1.7.18",
+    "axios": "^1.6.8",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
