--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
+    "mongodb": "^6.5.0",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
