--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@fontsource/poppins": "^5.0.12",
     "@headlessui/react": "^1.7.18",
     "axios": "^1.6.8",
+    "express": "^4.19.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
+    "mongodb": "^6.5.0",
+    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
