--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,9 @@
   "type": "module",
   "description": "",
   "main": "index.js",
-  
-  "env":{
-    "node":true
+  "env": {
+    "node": true
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -17,9 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
-    "nodemon": "^3.1.0",
-    "dotenv": "^16.4.5"
+    "nodemon": "^3.1.0"
   }
 }
