--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,12 @@
   "description": "",
   "main": "index.js",
   "env": {
-    "node": true
+    "node": true,
+    "es2021": true
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 12
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,10 +20,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.34.1"
   }
 }
