--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://banaalhawadya:BZKMONGO@cluster0.gb0y35r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://banaalhawadya:BZKMONGO@cluster0.gb0y35r.mongodb.net/BZKdatabase?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3500
