--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,20 +19,18 @@ jobs:
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: build
-          path: build
+          name: build-artifact
+          path: dist # Changed from build to dist
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2.3.2
       - name: Download Artifact
         uses: actions/download-artifact@v2
         with:
-          name: build
-          path: build
+          name: build-artifact # Ensure this name matches the uploaded artifact's name
+          path: dist # Changed from build to dist; this will download the artifact into a dist directory
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
