--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,20 @@ jobs:
           name: build-artifact
           path: dist # Changed from build to dist
   deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: build-artifact # Ensure this name matches the uploaded artifact's name
-          path: dist # Changed from build to dist; this will download the artifact into a dist directory
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only hosting
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+  name: Deploy
+  needs: build
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout Repo # Ensure firebase.json is checked out
+      uses: actions/checkout@v2.3.2
+    - name: Download Artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifact
+        # No path specified, downloads to the root of the workspace
+    - name: Deploy to Firebase
+      uses: w9jds/firebase-action@master
+      with:
+        args: deploy --only hosting
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
