--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.34.1"
   }
