--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI="mongodb+srv://banaalhawadya:BZKMONGO@cluster0.gb0y35r.mongodb.net/BZKdatabase?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3500
+origin="http://localhost:5174"
