--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.mjs"
+    "start": "node /app.mjs",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
