--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node /app.mjs",
-    "build": "tsc"
+    "start": "node /app.mjs"
   },
   "keywords": [],
   "author": "",
