--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.10.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.358.0",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
