--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "formik": "^2.4.5",
     "framer-motion": "^11.0.14",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.358.0",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.23.0",
     "swiper": "^11.0.7",
     "yup": "^1.4.0"
   },
