--- a/backend/package.json
+++ b/backend/package.json
@@ -28,10 +28,14 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
