--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URI="mongodb+srv://banaalhawadya:BZKMONGO@cluster0.gb0y35r.mongodb.net/FETCHER?retryWrites=true&w=majority&appName=Cluster0"
 PORT=5050
-origin="http://localhost:5173"
+# origin="http://localhost:5173"  
 JWT_SECRET=Z391B8tkvk4dNMqWPi50FANiSoaz4y0A
