--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.23.0",
     "swiper": "^11.0.7",
+    "vercel": "^34.2.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
